--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)"><b>HOME</b></a>
+            <a class="nav-link" href="javascript:void(0)"><div class="nav">HOME</div></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)"><b>ABOUT</b></a>
+            <a class="nav-link" href="javascript:void(0)"><div class="nav">ABOUT</div></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)"><b>CONTACT</b></a>
+            <a class="nav-link" href="javascript:void(0)"><div class="nav">CONTACT</div></a>
           </li>
         </ul>
       </div>
